Areglo final para la visualizacion de gameplay. Limpìeza de codigo no util.